--- a/style.css
+++ b/style.css
@@ -45,3 +45,7 @@ fieldset:focus , textarea:focus , input:focus  {
 .FieldError {
 	border:2px solid red;
 }
+
+.FieldOk {
+	border:2px solid green;
+}
